src/test/deca/codegen/valid/MoinsInitDivUn.deca
// Description:
//    tests simple division
//
// Resultats:
//
//
// Historique:
//    cree le 20/01/2017
{
int x = 1;
print((-x)/1);
}
