src/test/deca/codegen/invalid/UnDivNoInit.deca
// Description:
//    division sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 22/01/2017
{
int x;
print(1 / x);
}
